--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,44 +1,20 @@
-name: Deploy to S3
-
-on:
-  push:
-    branches:
-      - master
-
+name : my react app - app
+run-name : ${{ github.actor }}
+on : [push]
 jobs:
-  build-and-deploy:
+  push-to-s3:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-        with:
-          path: portfolio # Specify the directory where the repository should be checked out
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: '14'
-
-      - name: Check npm version
-        run: npm --version
-
-      - name: Install dependencies
-        run: |
-          cd portfolio
-          npm install --verbose
-
-      - name: Build project
-        run: |
-          cd portfolio
-          npm run build
-
-      - name: Deploy to S3
+      - name: Check out repository code
+        uses: actions/checkout@v4
+      - name: Run npm
+        run: npm install
+      - name: Run npm build
+        run: npm run build
+      - name: Upload to s3
+        uses: jakejarvis/s3-sync-action@master
         env:
+          SOURCE_DIR: build/
+          AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_REGION: ${{ secrets.AWS_REGION }}
-          S3_BUCKET_NAME: ${{ secrets.S3_BUCKET_NAME }}
-        run: |
-          npm install -g aws-cli
-          aws s3 sync portfolio/build/ s3://$S3_BUCKET_NAME --delete
